5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1590_1570.log
== TEST (2019-03-22 21:02:17) 
-- CODE:
texto = "BATMAN"
print(texto.lower()) 


-- OUTPUT:
batman
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:02:20) 
-- CODE:
texto = "BATMAN"
print(texto.lower()) 


-- EXECUTION TIME:
0.184339
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
batman
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:14:54) 
-- CODE:
texto = "BATMAN"
print(texto.lower()) 


-- OUTPUT:
batman
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:14:58) 
-- CODE:
texto = "BATMAN"
print(texto.lower()) 


-- EXECUTION TIME:
0.165103
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
batman
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:15:38) 
-- CODE:
texto = "texto = "
print(texto.lower()) 


-- OUTPUT:
texto =
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:15:46) 
-- CODE:
texto = "texto = samira"
print(texto.lower()) 


-- OUTPUT:
texto = samira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:15:49) 
-- CODE:
texto = "texto = samira"
print(texto.lower()) 


-- EXECUTION TIME:
0.13839
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
texto = samira
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:16:01) 
-- CODE:
texto = texto = "samira"
print(texto.lower()) 


-- OUTPUT:
samira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:16:17) 
-- CODE:
texto = texto = "SAMIRA"
print(texto.lower()) 


-- OUTPUT:
samira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:16:20) 
-- CODE:
texto = texto = "SAMIRA"
print(texto.lower()) 


-- EXECUTION TIME:
0.202138
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
samira
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:16:58) 
-- CODE:
texto = texto = "SAMIRA"
print(texto.lower()) 


-- OUTPUT:
samira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:18:11) 
-- CODE:
texto = texto = "SAMIRA"
print(SAMIRA.lower()) 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(SAMIRA.lower()) 
NameError: name 'SAMIRA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:18:23) 
-- CODE:
texto = "SAMIRA"
print(lower()) 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(lower()) 
NameError: name 'lower' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:18:39) 
-- CODE:
texto = "SAMIRA"
print(texto.lower()) 


-- OUTPUT:
samira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:18:41) 
-- CODE:
texto = "SAMIRA"
print(texto.lower()) 


-- EXECUTION TIME:
0.231479
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
samira
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:18:43) 
-- CODE:
texto = "SAMIRA"
print(texto.lower()) 


-- EXECUTION TIME:
0.148503
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
samira
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:19:07) 
-- CODE:
texto = "SAMIRA"
print(texto.lower()) 


-- OUTPUT:
samira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:19:26) 
-- CODE:
texto = "Samira"
print(texto.lower()) 


-- OUTPUT:
samira
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:19:28) 
-- CODE:
texto = "Samira"
print(texto.lower()) 


-- EXECUTION TIME:
0.125612
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
samira
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:22:14) 
-- CODE:
texto = "BATMAN"
print(texto.lower()) 


-- OUTPUT:
batman
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:22:17) 
-- CODE:
texto = "BATMAN"
print(texto.lower()) 


-- EXECUTION TIME:
0.130129
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
batman
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:22:24) 
-- CODE:
texto="BATMAN"
print(texto.lower()) 


-- OUTPUT:
batman
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:22:26) 
-- CODE:
texto="BATMAN"
print(texto.lower()) 


-- EXECUTION TIME:
0.135761
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
batman
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:33:24) 
-- CODE:
input(texto = "BATMAN"())
print(texto.lower()) 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(texto = "BATMAN"())
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:41:03) 
-- CODE:
texto = "BATMAN"
print(texto.lower()) 


-- EXECUTION TIME:
0.251019
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
batman
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:41:12) 
-- CODE:
texto = "BATMAN"
print(BATMAN.lower()) 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(BATMAN.lower()) 
NameError: name 'BATMAN' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:41:28) 
-- CODE:
texto = "BATMAN"
print(texto.lower()) 



-- OUTPUT:
batman
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:41:31) 
-- CODE:
texto = "BATMAN"
print(texto.lower()) 



-- EXECUTION TIME:
0.112946
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
batman
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:41:43) 
-- CODE:
texto = " "
print(texto.lower()) 



-- OUTPUT:
batman
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:46:11) 
-- CODE:
texto = (input("BATMAN"))
print(texto.lower()) 



-- OUTPUT:
primeiro_caso_de_teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:46:14) 
-- CODE:
texto = (input("BATMAN"))
print(texto.lower()) 



-- EXECUTION TIME:
0.162372
-- TEST CASE 1:
---- input:
PRIMEIRO_CASO_DE_TESTE
---- correct output:
primeiro_caso_de_teste
---- user output:
primeiro_caso_de_teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
